force-app/main/default/objects/Anime__c/Anime__c.object-meta.xml
<CustomObject>
    <label>Anime</label>
    <nameField>
        <label>Anime Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Anime</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>