force-app/main/default/objects/Anime__c/fields/Cover_Image__c.field-meta.xml
<CustomField>
    <fullName>Cover_Image__c</fullName>
    <label>Cover Image</label>
    <length>120</length>
    <type>Text</type>
</CustomField>