force-app/main/default/objects/Anime__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Start Date</label>
    <length>30</length>
    <type>Text</type>
</CustomField>