force-app/main/default/objects/Anime__c/fields/Rated__c.field-meta.xml
<CustomField>
    <fullName>Rated__c</fullName>
    <label>Rated</label>
    <length>10</length>
    <type>Text</type>
</CustomField>