force-app/main/default/objects/Anime__c/fields/Season_Number__c.field-meta.xml
<CustomField>
    <fullName>Season_Number__c</fullName>
    <label>Season Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>