force-app/main/default/objects/Anime__c/fields/Total_Episodes__c.field-meta.xml
<CustomField>
    <fullName>Total_Episodes__c</fullName>
    <label>Total Episodes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>